crates/weft-snapshots/tests/snapshots/react-jsx/corpus-search-results.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-search-results as react-jsx
---
import { Fragment } from "react";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _url(value) {
  const url = value.replace(/[\t\n\r]/g, "").replace(/^[\u0000- ]+|[\u0000- ]+$/g, "");
  if (url === "") return undefined;
  const colon = url.indexOf(":");
  const delimiter = url.search(/[/?#]/);
  if (colon < 0 || (delimiter >= 0 && colon > delimiter)) return url;
  const scheme = /^([A-Za-z][A-Za-z0-9+.-]*):/.exec(url)?.[1]?.toLowerCase();
  return scheme === "http" || scheme === "https" || scheme === "mailto" ? url : undefined;
}

export default function WeftScreen({ data, actions, onChange }) {
  return (
    <main data-weft-id="search" aria-label="Search">
      <form data-weft-id="form" onSubmit={(_e) => { _e.preventDefault(); _act(actions, { id: "form", action: "search.run" }); }}>
        <div data-weft-id="bar" style={{ gap: "var(--weft-space-sm)", display: "flex", flexDirection: "row", alignItems: "center" }}>
          <div data-weft-field="">
            <label>
              <span aria-hidden="true">Search</span>
              <input data-weft-id="query" aria-label="Search" type="search" value={_text(data?.query)} onChange={(_e) => onChange?.("$.query", _e.currentTarget.value)} />
            </label>
          </div>
          <button data-weft-id="go" type="submit" data-variant="primary" onClick={(_e) => { _e.preventDefault(); _act(actions, { id: "form", action: "search.run" }); }}>Search</button>
        </div>
      </form>
      <ul data-weft-id="results">
        {!(_list(data?.results).length > 0) ? (
          <li role="none" data-weft-slot="empty">
            <div data-weft-id="empty">No results found</div>
          </li>
        ) : (
          <>
            {_list(data?.results).map((result, _i0) => (
              <Fragment key={_i0}>
                <li data-weft-id={"result[" + _i0 + "]"}>
                  <h3 data-weft-id={"result-title[" + _i0 + "]"}>
                    {!(_text(result?.title).trim() === "") ? _squash(_text(result?.title)) : ""}
                  </h3>
                  <div data-weft-id={"result-snippet[" + _i0 + "]"}>
                    {!(_text(result?.snippet).trim() === "") ? _squash(_text(result?.snippet)) : ""}
                  </div>
                  {(() => {
                    const _href = _url("");
                    return (
                      <a data-weft-id={"result-open[" + _i0 + "]"} href={_href} role={_href === undefined ? "link" : undefined} tabIndex={_href === undefined ? 0 : undefined} onKeyDown={_href === undefined ? (_e) => { if (_e.key !== "Enter" || _e.target !== _e.currentTarget) return; _e.preventDefault(); _act(actions, { id: "result-open[" + _i0 + "]", action: "results.open", item: "$.results." + _i0 }); } : undefined} onClick={() => _act(actions, { id: "result-open[" + _i0 + "]", action: "results.open", item: "$.results." + _i0 })} style={{ display: "inline-block" }}>Open</a>
                    );
                  })()}
                </li>
              </Fragment>
            ))}
          </>
        )}
      </ul>
    </main>
  );
}
